<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <NumberPicker
            android:id="@+id/HourSelect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/Divider"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/Divider"
            android:textAlignment="center"
            android:textSize="@dimen/headerSize" />

        <NumberPicker
            android:id="@+id/Minute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/AmPm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/Mon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Monday" />

        <CheckBox
            android:id="@+id/Tues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Tuesday" />

        <CheckBox
            android:id="@+id/Wed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Wednesday" />

        <CheckBox
            android:id="@+id/Thurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thursday" />

        <CheckBox
            android:id="@+id/Fri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Friday" />

        <CheckBox
            android:id="@+id/Sat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Saturday" />

        <CheckBox
            android:id="@+id/Sun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Sunday" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TimeLabel"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <Spinner
        android:id="@+id/SelectTimeZone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/TimeZones"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/CancelButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text = "@string/Cancel"/>

        <Button
            android:id="@+id/SaveButton"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/Save"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>